# Violet

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  config.json  fix_build.sh  imgui.ini  vcpkg.json
.cache/clangd/index/: Pipeline.cpp.C1A0BBD174103EE1.idx  Pipeline.hpp.3534E7EA209AD381.idx  RenderPass.cpp.8A96365650165E21.idx  RenderPass.hpp.19DE6420B2D08032.idx  Swapchain.cpp.07716B020456B3DD.idx  Swapchain.hpp.D78E43033CAEEF19.idx  VulkanContext.cpp.6D4F89F172AA6267.idx  VulkanContext.hpp.67D562216AC9E87A.idx  main.cpp.0D1EA0738D889364.idx
cmake/: CompilerSettings.cmake
overlays/vulkan/: vcpkg.json
overlays/vulkan-headers/: vcpkg.json
overlays/vulkan-loader/: vcpkg.json
shaders/: brdf_lut.comp  debug.frag  debug.vert  equirect_to_cubemap.comp  irradiance_convolution.comp  luminance_average.comp  luminance_histogram.comp  model.frag  model.vert  pbr.frag  pbr.vert  pbr_bindless.frag  pbr_bindless.vert  postprocess.frag  postprocess.vert  prefilter_environment.comp  shadow.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert
shaders/slang/: Bindless.slang  Common.slang  PBR.slang  Sampling.slang  TypeDefinitions.slang  Types.slang  Utilities.slang  brdf_lut.slang  debug.slang  equirect_to_cubemap.slang  irradiance_convolution.slang  luminance_average.slang  luminance_histogram.slang  pbr_bindless.slang  postprocess.slang  prefilter_environment.slang  shadow.slang  skybox.slang  test_reflection.slang  test_simple.slang
src/: main.cpp
src/acceleration/: BVH.hpp
src/asset/: AssetLoader.cpp  AssetLoader.hpp  GLTFAsset.hpp
src/core/: App.cpp  App.hpp  Exception.hpp  FileSystem.cpp  FileSystem.hpp  Log.cpp  Log.hpp  MathUtils.hpp  TestData.cpp  TestData.hpp  TestTexture.cpp  TestTexture.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  Window.cpp  Window.hpp  tinygltf_impl.cpp
src/core/events/: Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp
src/ecs/: Components.hpp  World.cpp  World.hpp
src/examples/: ECSTestApp.cpp  ECSTestApp.hpp  TestApp.cpp  TestApp.hpp  TestData.cpp  TestData.hpp  TestTexture.cpp  TestTexture.hpp  VioletApp.cpp  VioletApp.hpp
src/input/: CameraController.cpp  Input.cpp  Input.hpp  InputEvents.hpp  InputManager.cpp  InputManager.hpp
src/math/: AABB.hpp  Frustum.hpp  Ray.hpp
src/renderer/: BaseRenderer.cpp  BaseRenderer.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  ComputePass.cpp  ComputePass.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DescriptorSet.cpp  DescriptorSet.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  GPUResource.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LightingSystem.cpp  LightingSystem.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pass.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  (+35 more)
src/renderer/camera/: Camera.cpp
src/renderer/core/: ComputePass.cpp  ComputePass.hpp  DebugRenderer.cpp  DebugRenderer.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  RenderPass.cpp  RenderPass.hpp  TransferPass.cpp  TransferPass.hpp  VulkanContext.cpp  VulkanContext.hpp
src/renderer/descriptor/: DescriptorManager.cpp  DescriptorManager.hpp
src/renderer/effect/: AutoExposure.cpp  AutoExposure.hpp  EnvironmentMap.cpp  EnvironmentMap.hpp  Tonemap.cpp  Tonemap.hpp
src/renderer/graph/: ComputePass.cpp  ComputePass.hpp  Pass.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPass.cpp  RenderPass.hpp  ResourceHandle.hpp  TransferPass.cpp  TransferPass.hpp  TransientPool.cpp  TransientPool.hpp
src/renderer/pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp
src/renderer/vulkan/: ComputePass.cpp  ComputePass.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorManager.cpp  DescriptorManager.hpp  DescriptorSet.cpp  DescriptorSet.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  PipelineBase.cpp  RenderPass.cpp  RenderPass.hpp  ShaderResources.cpp  ShaderResources.hpp  Swapchain.cpp  Swapchain.hpp  TransferPass.cpp  TransferPass.hpp  VulkanContext.cpp  VulkanContext.hpp
src/resource/: Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  ResourceManager.cpp  ResourceManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Vertex.cpp  Vertex.hpp
src/resource/gpu/: Buffer.cpp  IndexBuffer.cpp  IndexBuffer.hpp  ResourceFactory.cpp  ResourceFactory.hpp  ResourceLoader.cpp  ResourceLoader.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/resource/shader/: GLSLCompiler.cpp  GLSLCompiler.hpp  ReflectionHelper.cpp  ReflectionHelper.hpp  Shader.cpp  Shader.hpp  ShaderCompiler.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  ShaderReflection.cpp  ShaderReflection.hpp  SlangCompiler.cpp  SlangCompiler.hpp
src/scene/: Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp
src/ui/: AssetBrowserLayer.cpp  AssetBrowserLayer.hpp  CompositeUILayer.hpp  ImGuiVulkanBackend.cpp  ImGuiVulkanBackend.hpp  RenderSettingsLayer.cpp  RenderSettingsLayer.hpp  SceneDebugLayer.cpp  SceneDebugLayer.hpp  UILayer.cpp  UILayer.hpp  ViewportLayer.cpp  ViewportLayer.hpp
tests/: TestRenderGraph.cpp  TestRenderGraph.hpp  render_graph_dag_test.cpp  test_slang_reflection.cpp
